[tool.poetry]
name = "r2_dot_sim"
version = "0.1.0"
description = ""
authors = ["task4233 <29667656+task4233@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
networkx = "2.5.1"
pydot = "1.4.1"
pytest = "6.2.5"
pygraphviz = "1.6"
scipy = "1.5.4"
node2vec = "0.4.3"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
